--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ListView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -10,4 +9,4 @@
         android:layout_height="wrap_content" >
     </ListView>
 
-</ListView>
+</RelativeLayout>
