--- a/res/layout/range_selection_dialog.xml
+++ b/res/layout/range_selection_dialog.xml
@@ -9,8 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/activity_add_new_question_minimum_value_hint"
-        android:inputType="number" >
+        android:hint="@string/activity_add_new_question_minimum_value_hint" >
 
         <requestFocus />
     </EditText>
@@ -20,7 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/activity_add_new_question_maximum_value_hint"
-        android:inputType="number" />
+        android:hint="@string/activity_add_new_question_maximum_value_hint"/>
 
 </LinearLayout>
