--- a/res/layout/range_selection_dialog.xml
+++ b/res/layout/range_selection_dialog.xml
@@ -4,11 +4,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/activity_add_new_question_scale_selection_dialog_message"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
     <EditText
         android:id="@+id/activity_add_new_question_editText_minimum_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:inputType="number"
         android:hint="@string/activity_add_new_question_minimum_value_hint" >
 
         <requestFocus />
@@ -19,6 +27,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:inputType="number"
         android:hint="@string/activity_add_new_question_maximum_value_hint"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/activity_add_new_question_range_selection_button_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/OK" />
+        
+        <Button
+            android:id="@+id/activity_add_new_question_range_selection_button_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/activity_add_new_question_range_selection_button_ok"
+            android:text="@string/cancel" />
+
+        
+
+    </RelativeLayout>
 
 </LinearLayout>
