--- a/res/menu/activity_show_questions.xml
+++ b/res/menu/activity_show_questions.xml
@@ -1,10 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
-    <item android:id="@+id/add_new_question"
-        android:title="@string/add_new_question"
+    <item android:id="@+id/activity_show_questions_add_new_question"
+        android:title="@string/activity_show_questions_add_new_question"
         android:orderInCategory="200"
         android:showAsAction="always"></item>
 </menu>
