--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -9,4 +9,29 @@
         android:layout_height="wrap_content" >
     </ListView>
 
-</RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/listview_floating_buttons_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:orientation="vertical"
+        android:visibility="gone" >
+
+        <Button
+            android:id="@+id/listview_button_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:text="@string/OK" />
+
+        <Button
+            android:id="@+id/listview_button_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/listview_button_ok"
+            android:text="@string/cancel" />
+    </RelativeLayout>
+
+</FrameLayout>
