--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -9,29 +9,28 @@
         android:layout_height="wrap_content" >
     </ListView>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/listview_floating_buttons_bar"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:orientation="vertical"
+        android:background="@color/white"
+        android:orientation="horizontal"
         android:visibility="gone" >
 
         <Button
             android:id="@+id/listview_button_ok"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
+            android:layout_weight="1"
             android:text="@string/OK" />
 
         <Button
             android:id="@+id/listview_button_cancel"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/listview_button_ok"
+            android:layout_weight="1"
             android:text="@string/cancel" />
-    </RelativeLayout>
+    </LinearLayout>
 
 </FrameLayout>
