--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -23,7 +23,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/OK" />
+            android:text="@string/ok" />
 
         <Button
             android:id="@+id/listview_button_cancel"
