--- a/res/layout/activity_add_new_question.xml
+++ b/res/layout/activity_add_new_question.xml
@@ -48,7 +48,7 @@
             android:id="@+id/activity_add_new_question_button_add_new_question_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/OK" />
+            android:text="@string/ok" />
 
         <Button
             android:id="@+id/activity_add_new_question_button_add_new_question_cancel"
