--- a/res/layout/range_selection_dialog.xml
+++ b/res/layout/range_selection_dialog.xml
@@ -38,7 +38,7 @@
             android:id="@+id/activity_add_new_question_range_selection_button_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/OK" />
+            android:text="@string/ok" />
         
         <Button
             android:id="@+id/activity_add_new_question_range_selection_button_cancel"
