--- a/res/menu/activity_crudobject.xml
+++ b/res/menu/activity_crudobject.xml
@@ -1,6 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
+    <item android:id="@+id/activity_crudobject_create"
+        android:title="@string/add_item"
         android:orderInCategory="100"
+        android:showAsAction="never" />
+    <item android:id="@+id/activity_crudobject_select"
+        android:title="@string/select_items"
+        android:orderInCategory="200"
+        android:showAsAction="never" />
+    <item android:id="@+id/activity_crudobject_delete"
+        android:title="@string/delete_items"
+        android:orderInCategory="300"
         android:showAsAction="never" />
 </menu>
