--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -19,18 +19,28 @@
         android:visibility="gone" >
 
         <Button
-            android:id="@+id/listview_button_ok"
+            android:id="@+id/listview_button_select"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/ok" />
+            android:text="@string/select"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/listview_button_delete"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/delete"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/listview_button_cancel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/cancel" />
+            android:text="@string/cancel"
+            android:visibility="gone" />
     </LinearLayout>
 
 </FrameLayout>
