--- a/res/layout/activity_crudobject.xml
+++ b/res/layout/activity_crudobject.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent" >
 
     <ListView
-        android:id="@+id/listView_show_question_menu"
+        android:id="@+id/listView_show_items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
