--- a/res/layout/simple_list_item_2_with_checkbox.xml
+++ b/res/layout/simple_list_item_2_with_checkbox.xml
@@ -42,6 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="false"
         android:layout_alignParentRight="true"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
 </RelativeLayout>
