--- a/res/layout/simple_list_item_2_with_checkbox.xml
+++ b/res/layout/simple_list_item_2_with_checkbox.xml
@@ -24,17 +24,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="?android:attr/listPreferredItemPaddingLeft"
-        android:layout_marginTop="8dip"
-        android:textAppearance="?android:attr/textAppearanceListItem" />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/simple_list_item_2_with_checkbox_text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@android:id/text1"
-        android:layout_below="@+id/simple_list_item_2_with_checkbox_text1"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:layout_alignLeft="@+id/simple_list_item_2_with_checkbox_text1"
+        android:layout_below="@+id/simple_list_item_2_with_checkbox_text1" 
+        android:textAppearance="?android:attr/textAppearanceSmall"/>
 
     <CheckBox
         android:id="@+id/simple_list_item_2_with_checkbox_checkBox"
