--- a/res/layout/activity_add_new_question.xml
+++ b/res/layout/activity_add_new_question.xml
@@ -7,55 +7,37 @@
 
     <EditText
         android:id="@+id/activity_add_new_question_editText_question_title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
-        android:hint="@string/activity_add_new_question_type_question_title_hint" >
-
-        <requestFocus />
-    </EditText>
+        style="@style/text_view_inside_linear_layout"
+        android:hint="@string/activity_add_new_question_type_question_title_hint" />
 
     <EditText
         android:id="@+id/activity_add_new_question_editText_question_description"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
+        style="@style/text_view_inside_linear_layout"
         android:hint="@string/activity_add_new_question_type_question_description_hint" />
 
     <EditText
         android:id="@+id/activity_add_new_question_editText_question"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
+        style="@style/text_view_inside_linear_layout"
         android:hint="@string/activity_add_new_question_type_your_question_hint" />
 
     <Spinner
         android:id="@+id/activity_add_new_question_spinner_question_type"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
+        style="@style/spinner_style"
         android:prompt="@string/activity_add_new_question_spinner_question_type_prompt" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <Button
             android:id="@+id/activity_add_new_question_button_add_new_question_ok"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/button_inside_linear_layout"
             android:text="@string/ok" />
 
         <Button
             android:id="@+id/activity_add_new_question_button_add_new_question_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/activity_add_new_question_button_add_new_question_ok"
+            style="@style/button_inside_linear_layout"
             android:text="@string/cancel" />
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
