--- a/res/layout/activity_add_new_report_template.xml
+++ b/res/layout/activity_add_new_report_template.xml
@@ -1,38 +1,29 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <EditText
         android:id="@+id/report_template_name"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="false"
-        android:layout_centerInParent="true"
-        android:hint="@string/report_template_name_hint" >
-
-        <requestFocus />
-    </EditText>
+        style="@style/text_view_inside_linear_layout"
+        android:hint="@string/report_template_name_hint" />
+  
 
     <EditText
         android:id="@+id/report_template_description"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/report_template_name"
+        style="@style/text_view_inside_linear_layout"
         android:hint="@string/report_template_description_hint" />
 
     <TextView
         android:id="@+id/report_template_number_of_questions_added"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/report_template_description" />
+        style="@style/text_view_inside_linear_layout"/>
 
     <Button
         android:id="@+id/report_template_questions_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/report_template_number_of_questions_added"
         android:text="@string/add_or_remove_questions" />
 
     <LinearLayout
@@ -40,22 +31,17 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:orientation="horizontal" 
-        android:layout_below="@+id/report_template_questions_button">
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/ok_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/button_inside_linear_layout"
             android:text="@string/ok" />
 
         <Button
             android:id="@+id/cancel_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/button_inside_linear_layout"
             android:text="@string/cancel" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
