--- a/res/layout/ok_cancel_button.xml
+++ b/res/layout/ok_cancel_button.xml
@@ -6,16 +6,12 @@
 
             <Button
                 android:id="@+id/okButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                style="@style/button_inside_linear_layout"
                 android:text="@string/ok" />
 
             <Button
                 android:id="@+id/cancelButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                style="@style/button_inside_linear_layout"
                 android:text="@string/cancel" />
 
     
